--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -64,5 +64,6 @@
         android:layout_height="wrap_content"
         android:textColor="#000000"
         android:textSize="18sp"
+        android:autoLink="web"
         />
 </RelativeLayout>
