--- a/app/src/main/res/layout/fragment_update.xml
+++ b/app/src/main/res/layout/fragment_update.xml
@@ -50,43 +50,16 @@
             android:textSize="24sp" />
 
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="horizontal"
-        >
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="right"
-            android:text="@string/user_time_zone"
-            android:layout_gravity="top"
-            android:textColor="#000000"
-            android:textSize="18sp" />
-        <TextView
-            android:id="@+id/user_timezone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="left"
-            android:layout_gravity="top"
-            android:textColor="#000000"
-            android:textSize="24sp" />
 
-    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_weight="5"
+        android:layout_weight="0.5"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:orientation="horizontal"
         >
 
-
-        <org.angmarch.views.NiceSpinner
+        <androidx.appcompat.widget.AppCompatSpinner
             android:id="@+id/timezone_spinner"
             android:layout_weight="3"
             android:layout_width="0dp"
@@ -96,7 +69,6 @@
             android:paddingStart="100dp"
             android:paddingEnd="100dp"
             android:textSize="20sp"
-
             />
         <Button
             android:id="@+id/change_timezone_button"
@@ -105,10 +77,27 @@
             android:layout_height="wrap_content"
             android:text="@string/change_time_zone"
             />
+<!--        android:enabled="false"-->
+
     </LinearLayout>
 
-
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_weight="9"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="horizontal"
+        >
+        <ProgressBar
+            android:id="@+id/loading_update"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:gravity="center"
+            android:visibility="gone"
+             />
+    </LinearLayout>
 
 
 </LinearLayout>
