--- a/app/src/main/res/layout/fragment_update.xml
+++ b/app/src/main/res/layout/fragment_update.xml
@@ -62,7 +62,7 @@
         <androidx.appcompat.widget.AppCompatSpinner
             android:id="@+id/timezone_spinner"
             android:layout_weight="3"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
             android:gravity="center"
